plugins {
    // 루트에서는 버전만 등록하고(apply false), 실제 적용은 각 모듈에서 한다.
    id 'org.springframework.boot' version '4.1.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.growmighty.lectures.firstday'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    // Boot 플러그인을 적용하지 않은 모듈(common)도
    // Spring Boot BOM으로 의존성 버전을 통일해서 관리한다.
    dependencyManagement {
        imports {
            mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.1.2"
            // Boot 4 BOM 은 Testcontainers 버전을 더 이상 관리하지 않아 직접 가져온다.
            mavenBom "org.testcontainers:testcontainers-bom:1.21.3"
            // file-service의 S3 presigned URL 발급(S3Presigner)에 필요 — Boot BOM이 관리하지 않는다.
            mavenBom "software.amazon.awssdk:bom:2.53.1"
        }
    }

    dependencies {
        // 모든 모듈이 공통으로 쓰는 것만 여기에 (Lombok)
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
